# arch

bash-scripts/: android.sh  arch.sh  autorun.sh  backup.sh  base-install.sh  debian.sh  dotfiles-symlink.sh  dotfiles.sh  dwm.sh  fedora.sh  git.sh  jellyfin.sh  post-install.sh  screen-timeout.sh  virtual-machine.sh  xmonad-stack.sh
bash-scripts/archive/: autorun.sh  fedora.sh
btrfs/: btrfs-cheatsheet.md  btrfs-install.sh  btrfs-snapper.sh
chrome-extension/: background.js  content.js  manifest.json
chrome-extension/amazon/: background.js  content.js  manifest.json
chrome-extension/bookparse/: background.js  content.js  manifest.json
chrome-extension/worthpoint/: background.js  content.js  manifest.json
dotfiles/: bashrc  init.vim  kitty.conf  mpv.conf  picom.conf  rc.lua  sk.js  surfingkeys.js  user.js  xmobarrc  xmonad.hs
extensions/: amazon.js  bookparse-boxes.js  bookparse.js  clickcounter.js  ublock.txt
md/: debian.md  macos.md  rsync.md  server.md
python/clipboard-uv/: main.py  pyproject.toml
python/copy-data-from-excel-uv/: main.py  pyproject.toml
python/daily-mf-pricing-uv/: main.py  pyproject.toml
python/faster-whisper/: client.py  delete-model-instruction.txt  main.py  refactor.py  requirements.txt  (+2 more)
python/parakeet-cuda-uv/: client.py  main.py  pyproject.toml  requirements.txt  server.py  steps.md
python/sales-test-booksrun-uv/: countries.txt  main.py  pyproject.toml
python/transcribe-uv/: README.md  client.py  get_devices.py  pyproject.toml  server.py
violentmonkey/: amazon.js  bookparse.js  netflix.js  reddit.js  youtube.js
(+52 files in other folders)
