[project]
name = "sales-test-booksrun-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "pywin32>=311",
    "pywinauto>=0.6.9",
]
