[project]
name = "faster-whisper-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "flask>=3.1.2",
    "keyboard>=0.13.5",
    "numpy>=2.3.3",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "transformers>=4.56.1",
]
